added about page and js to make animations work.

--- a/css/front.css
+++ b/css/front.css
@@ -26,7 +26,7 @@ body{
     font-size: 1.5em;
     font-family: "Courier New";
 }
-#slogan{
+#slogan, #abt{
     font-size: 2em;
     font-family: "Courier New";
 }
