in progress update and change to main page

--- a/css/front.css
+++ b/css/front.css
@@ -36,3 +36,12 @@ body{
 .name{
     opacity: 0;
 }
+
+#brand{
+    font-family: "Courier New";
+}
+
+#status{
+    color: #aaaeb5;
+    text-align: center;
+}
