--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,22 @@
-.me-border
-{
+.me-border {
   border-radius: 100%;
-  border: 2px solid rgba(255, 255, 255, 0.075);
+  border: 0.1em solid rgba(255, 255, 255, 0.075);
   background: rgba(255, 255, 255, 0.075);
   vertical-align:middle;
-  width:240px;
-  height:240px;
-  padding:1px;
+  width: 14em;
+  height: 14em;
+  padding:.1em;
 }
+
+.me-card {
+  background-color: inherit;
+  color: aliceblue;
+  height: 12em;
+}
+.me-school { 
+  color: rgb(139, 139, 139);
+  text-decoration: none !important;
+}
+.me-school:hover { 
+  color: rgb(117, 117, 117);
+} 
