--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@
   background: #caa200;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0;
+  overflow: hidden;
 }
 .me-school:hover:after { 
   width: 100%; 
@@ -57,6 +58,7 @@
   background: #caa200;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0;
+  overflow: hidden;
 }
 .me-department:hover:after { 
   width: 100%; 
