adjust blur strength

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body{
 }
 .nav-color {
   background-color: #202020e1;
-  backdrop-filter: blur(1em);
-  -webkit-backdrop-filter: blur(1em);
-  -moz-backdrop-filter: blur(1em);
+  backdrop-filter: blur(.5em);
+  -webkit-backdrop-filter: blur(.5em);
+  -moz-backdrop-filter: blur(.5em);
 }
