--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 body{
   padding-top: 3.5em;
 }
+div#preloaded-images {
+   position: absolute;
+   overflow: hidden;
+   left: -9999px; 
+   top: -9999px;
+   height: 1px;
+   width: 1px;
+}
 .me-border {
   border-radius: 100%;
   vertical-align:middle;
